2007-01-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test000.cxx:
  - Test password encryption
2007-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test085.cxx:
  - Skip if backend version does not support prepared statements
  - Work around syntax error with prepared-statement parameters on 7.3 backend
 test/test091.cxx:
  - "Inert cursor" problem is fixed in backend 7.4, not 7.3.
 tools/maketemporary, tools/pqxx-fulltest, tools/preprelease:
  - Made "export" usage compatible with more shells
  - export TMPDIR
  - Skip documentation builds after the very first build
2007-01-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Added simulate_failure() for testing, thanks Joshua Moore-Oliva
 test/test094.cxx:
  - New
  - Tests transactor in-doubt handling, thanks Joshua Moore-Oliva
 tools/pqxx-fulltest:
  - Set TMPDIR to test directory to keep /tmp clean
 tools/preprelease:
  - Can leave its files in other places than /tmp (set by TMPDIR variable)
2007-01-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, src/connection_base.cxx:
  - Eliminated unnecessary check_result()
  - Exec() cached protocol version across connection resets
  - PQprepare()/PQexecPrepared() only work with protocol 3.0
  - Estimate server version if libpq doesn't have PQserverVersion()
  - Keep (estimated) server version in connection object
 src/result.cxx:
  - If result contains an error but has no PG_DIAG_SQLSTATE, throw sql_error
 test/test056.cxx:
  - Don't always get syntax_error even if we do have PQresultErrorField()
2006-12-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx, src/transaction_base.cxx:
  - Just one version of exec(), taking const string references
  - May fix lifetime-of-temporaries bug (query string was dying early)
2006-12-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Print libpq/backend configurations to test logs