@@ -1,6 +1,10 @@
 2007-01-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx, test/test000.cxx:
   - Test password encryption
+ include/pqxx/cursor.hxx, test/test003.cxx:
+  - Test cursor_base::close()
+  - Made cursor fetch()/move() functions pure-virtual
+  - Full test coverage
 2007-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
  test/test085.cxx:
   - Skip if backend version does not support prepared statements
